api, admin, ui, tests: add multiarch support
